restructured file system

--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
         <li><a href="index.html">Web Particles</a></li>
       </ul>
       <ul>
-        <li><a href="stochastic-roots-index.html">Stochastic Roots</a></li>
+        <li><a href="stochastic-roots/index.html">Stochastic Roots</a></li>
       </ul>
       <ul>
-        <li><a href="brownian-motion-index.html">Brownian Motion</a></li>
+        <li><a href="brownian-motion/index.html">Brownian Motion</a></li>
       </ul>
       <ul>
-        <li class="last"><a href="fractures-index.html">Fractures</a></li>
+        <li class="last"><a href="fractures/index.html">Fractures</a></li>
       </ul>
     </nav>
     
