--- a/stochastic-roots/index.html
+++ b/stochastic-roots/index.html
@@ -13,8 +13,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Stochastic Roots</title>
-    <link rel='stylesheet' href="stochastic-roots-style.css" type="text/css"></style>
-    <script src="stochastic-roots-script.js" defer></script>
+    <link rel='stylesheet' href="style.css" type="text/css"></style>
+    <script src="script.js" defer></script>
   </head>
   <body>
     <canvas id="canvas"></canvas>
@@ -30,16 +30,16 @@
     <h2>See More:</h2>
     <nav>
       <ul>
-        <li><a href="index.html">Web Particles</a></li>
+        <li><a href="../index.html">Web Particles</a></li>
       </ul>
       <ul>
-        <li><a href="stochastic-roots-index.html">Stochastic Roots</a></li>
+        <li><a href="index.html">Stochastic Roots</a></li>
       </ul>
       <ul>
-        <li><a href="brownian-motion-index.html">Brownian Motion</a></li>
+        <li><a href="../brownian-motion/index.html">Brownian Motion</a></li>
       </ul>
       <ul>
-        <li class="last"><a href="fractures-index.html">Fractures</a></li>
+        <li class="last"><a href="../fractures/index.html">Fractures</a></li>
       </ul>
     </nav>
 
