added banner & added closing input tag

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
       id="accelerationDamp"
     />
     <label for='ballColor'>Ball Color</label>
-    <input class='sidebar__not-a-slider' id='ballColor' type="color" value="#ffffff">
+    <input class='sidebar__not-a-slider' id='ballColor' type="color" value="#ffffff"/>
     <label for='canvasBounceOnOff'>Bounce On/Off</label>
     <input
       class='sidebar__not-a-slider'
