added parcel bundling and firebase hosting

--- a/src/fractures/index.html
+++ b/src/fractures/index.html
@@ -20,7 +20,7 @@
     <canvas id="canvas"></canvas>
 
     <!--/////////////////////////////////////////////////////////////-->
-  <div class='hamburger' onclick='showSliders()'>
+  <div class='hamburger'>
     <span class='hamburger__line1'></span>
     <span class='hamburger__line2'></span>
     <span class='hamburger__line3'></span>
