--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
 
   <!--  CREATE A ROLL-AWAY MENU -->
   <!--/////////////////////////////////////////////////////////////-->
-  <div class='hamburger' onclick='showSliders()'>
+  <div class='hamburger'>
     <span class='hamburger__line1'></span>
     <span class='hamburger__line2'></span>
     <span class='hamburger__line3'></span>
